--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,13 @@ nav,
 section,
 article,
 footer {
-    background-color: rgb(25, 115, 231);
+    background-color: rgb(32, 139, 226);
     margin: 2%;
     border-radius: 20px;
     height: 40vh;
     text-align: center;
 
 }
-
 
 /* HEADER STYLES */
 
@@ -43,4 +42,59 @@ article {
 /* FOOTER STYLES FROM HERE GOING DOWN */
 footer {
     clear: both;
+}
+
+
+
+
+/* MOBILE PHONE RESPONSIVE RULES */
+
+@media all and (max-width: 414px){
+    header,
+    nav,
+    section,
+    article,s
+    footer  {
+        background-color: rgb(221, 17, 2);
+        color: white;
+    }
+
+}
+/* THIS IS WHERE I'VE PLACED ALL MY TABLET/ 
+IPAD RESPONSIVE RULES */
+@media all and (min-width: 768px){
+    header,
+    nav,
+    section,
+    article,s
+    footer  {
+        background-color: rgb(2, 96, 238);
+        color: white;
+    }
+
+    /* DESKTOP RESPONSIVE RULES */
+
+@media all and (min-width: 1280px){
+    header,
+    nav,
+    section,
+    article,s
+    footer  {
+        background-color: rgb(45, 241, 6);
+        color: white;
+    }
+
+}
+
+/* LARGER SCREENS DESKTOP RESPONSIVE RULES */
+
+@media all and (min-width: 1440px){
+    header,
+    nav,
+    section,
+    article,s
+    footer {
+        background-color: rgb(255, 217, 0);
+        color: rgb(20, 17, 17);
+    }
 }
